--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,6 @@
 
 .content {
   background-color: #000000;
-  display: flex;
-  flex-direction: column;
-  gap: 100px;
   overflow: hidden;
   position: relative;
 }
@@ -20,6 +17,13 @@
   right: 100px;
   z-index: 100;
   height: 100px;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  /* For Mbbile Menu */
+  transition: transform 0.5s ease-in;
 }
 
 .menu {
@@ -40,6 +44,7 @@
 }
 
 .menu-link {
+  color: black;
   text-decoration: none;
 }
 
@@ -48,26 +53,43 @@
   text-decoration: underline;
 }
 
-.next-page, .previous-page {
+.burger {
+  display: none;
+  position: absolute;
+  top: 31px;
+  right: 5%;
+  width: 25px;
+  z-index: 200;
+}
+
+.burger > div {
+  width: 100%;
+  height: 3px;
+  margin: 5px;
+  background-color: #272525;
+  transition: all 0.5s ease-in;
+}
+
+.next-page,
+.previous-page {
   position: fixed;
   top: 50%;
   z-index: 100;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
   padding: 20px 30px;
   font-size: 20px;
 }
 
 .next-page {
-    right: 2%;
-    transform: translateX(200%);
+  right: 2%;
+  transform: translateX(200%);
 }
 
 .previous-page {
   transform: translateX(-200%);
   left: 2%;
 }
-
 
 .home-content {
   height: 100vh;
@@ -142,9 +164,9 @@
   width: 100%;
   background: url("./experience-background.jpg") no-repeat;
   background-size: cover;
-  background-position-y: 70%;
 
   display: flex;
+  flex-direction: row-reverse;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
@@ -161,10 +183,24 @@
   z-index: 10;
   padding: 20px 30px;
   border-radius: 5%;
-  box-shadow: 5px 10px rgba(0, 0, 0, 0.5);
   background-color: #08aeea;
   background-image: linear-gradient(0deg, #08aeea 0%, #2af598 100%);
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.job:hover {
+  box-shadow: 5px 10px rgba(0, 0, 0, 0.5);
+  transform: translateZ(300px);
+}
+
+.job > * {
+  pointer-events: none;
+}
+
+.job-active {
+  background-color: #85ffbd;
+  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
 }
 
 .job-description {
@@ -173,15 +209,39 @@
   height: 80%;
   padding: 20px 30px;
   overflow-y: auto;
-  scroll-behavior: smooth;
-}
-
-.job-description {
   font-size: 1.25rem;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.jd-close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 200;
+  display: none;
+  cursor: pointer;
+}
+
+.jd-close div {
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  background-color: #272525;
+}
+
+.jd-close > .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.jd-close > .line2 {
+  opacity: 0;
+}
+
+.jd-close > .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
 }
 
 .job-description p {
@@ -203,15 +263,15 @@
   height: 100vh;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, 1fr);
+  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-auto-flow: dense;
   background: url("./education-background.jpg") no-repeat;
+  background-position-y: 70%;
   background-size: cover;
 }
 
 .degree {
-  min-height: 200px;
-  min-width: 400px;
   margin: 20px;
   padding: 20px 30px;
   border-radius: 5%;
@@ -283,4 +343,102 @@
 
 .about p strong {
   margin-right: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .menu-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    height: 100vh;
+    width: 50%;
+
+    background-color: rgba(243, 242, 242, 0.8);
+    transform: translateX(200%);
+    z-index: 150;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+  }
+
+  .menu-active {
+    transform: translateX(0%);
+  }
+
+  .burger-active > .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+
+  .burger-active > .line2 {
+    opacity: 0;
+  }
+
+  .burger-active > .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+
+  .menu-link:hover {
+    color: red;
+  }
+
+  .burger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .home-content,
+  .experience-content,
+  .education-content,
+  .about-content {
+    background-position: center;
+  }
+
+  .summary, .about {
+    width: 80%;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -80%);
+  }
+
+  .experience-content {
+    background-position-x: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px;
+  }
+
+  .job-description {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin-top: 0;
+    z-index: 200;
+    background-color: rgba(255, 255, 255);
+    padding: 80px 20px;
+  }
+
+  .jd-active {
+    display: block;
+  }
+
+  .education-content {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 50px 80px;
+  }
+
+  .degree {
+    grid-column: 1;
+  }
 }
